--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 :root {
-    --main-bg-color: #000;
+    --main-bg-color: #f7f7f7;
     --main-txt-color: #333;
+    --section-bg-color: #9BA78A;
     --font-primary: 'Quicksand', sans-serif;
     --font-secundary: 'Montserrat', sans-serif;
 }
@@ -14,6 +15,7 @@
 body {
     font-family: var(--font-primary);
     color: var(--main-txt-color);
+    background: var(--main-bg-color);
 }
 
 .wrapper {
@@ -21,8 +23,77 @@ body {
     max-width: 1280px;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: minmax(250px, 0.5fr) 1fr;
+    grid-template-columns: minmax(250px, 0.4fr) 1fr;
     grid-template-rows: 300px auto;
+    grid-gap: 20px;
+    padding: 0 10px;
+}
+
+main.content {
+    grid-row: 2 / span 1;
+}
+
+aside.sidebar--section {
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 2;
+}
+
+.post--item {
+    background: #fff;
+    margin: 20px auto;
+    padding: 20px;
+    border-radius: 4px;
+}
+
+.post--item h2 {
+    margin: 10px auto;
+    padding: 4px 10px;
+    border-left: 4px solid var(--section-bg-color);
+    font-size: calc(16px + 0.5vw);
+}
+
+.post--item p {
+    text-align: justify;
+    margin: 5px auto;
+}
+
+.post--item .post_date--item {
+    display: inline-block;
+    color: #999;
+    font-size: 14px;
+    margin: 4px 16px
+}
+
+.widget {
+    margin: 10px auto;
+    padding: 10px 15px;
+    list-style-type: none;
+
+}
+
+.widget h2 {
+    padding: 5px;
+    margin: 5px 10px;
+    border-bottom: 1px solid #d9d9d9;
+    text-align: center;
+}
+
+.widget p {
+    margin: 15px 0;
+}
+
+.widget.green {
+    background: var(--section-bg-color);
+    color: #fff;
+}
+
+.widget.light{
+    border: 1px solid #d9d9d9;
+}
+
+.button {
+    padding: 20px;
+    border-radius: 6px;
 }
 
 
